k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost
  namespace: nekazari
spec:
  selector:
    app: mattermost
  ports:
    - port: 8065
      targetPort: 8065
      protocol: TCP
      name: http
  type: ClusterIP
